--- a/src/front/index.html
+++ b/src/front/index.html
@@ -1,60 +1,120 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-		<!-- Navigation bar -->
-        <nav style="background-color:#124580">
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo left" style="margin-left: 15px;">Smart Home</a>
-                <ul id="nav-mobile" class="right" style="margin-right: 15px;">
-                    <li class="active"><a href="#">Devices</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
+<html>
+
+<head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+    <!-- Navigation bar -->
+    <nav style="background-color:#124580">
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo left" style="margin-left: 15px;">Smart Home</a>
+            <ul id="nav-mobile" class="right" style="margin-right: 15px;">
+                <li class="active">
+                    <a href="#boton-prueba">Boton de prueba</a>
+                </li>
+                <li class="active">
+                    <a href="#dispositivos">Dispositivos</a>
+                </li>
+                <li>
+                    <a href="#">Configuración</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Page Body -->
+    <div class="container">
+        <a id="boton-prueba"></a>
+        <h4>Boton de prueba</h4>
+        <a id="boton" class="waves-effect waves-light btn">button</a>
+    </div>
+    <br />
+    <div class="container">
+        <a id="dispositivos"></a>
+        <h4>Dispositivos</h4>
+        <ul id="devicesList" class="collection">
+            <!---
+        <li class="collection-item avatar">
+          <img src="images/lightbulb.png" alt="" class="circle">
+          <span class="title">Lámpara 1</span>
+          <p>Luz living</p>
+          <a href="#!" class="secondary-content"> 
+                        Switch 
+            <div class="switch">
+                <label>
+                Off
+                <input type="checkbox">
+                <span class="lever"></span>
+                On
+                </label>
             </div>
-        </nav>	
-		<!-- Page Body -->
-		<div class="container">
-			<br/>
-            <h3>Smart Home Web Client!</h3>
-            <br/>
-            <a id = "boton" class="waves-effect waves-light btn">button</a>
-			<div class="row">
-                <div class="input-field col l10 m12 s12">
-                    <textarea id="textarea_1" class="materialize-textarea" style="height: 450px;" readonly></textarea>
-                    <label for="textarea_1"></label>
+        </a>
+        </li>
+        <li class="collection-item avatar">
+            <img src="images/lightbulb.png" alt="" class="circle">
+          <span class="title">Lámpara 2</span>
+          <p>Luz cocina</p>
+          <a href="#!" class="secondary-content">
+                        Switch 
+            <div class="switch">
+                <label>
+                Off
+                <input type="checkbox">
+                <span class="lever"></span>
+                On
+                </label>
+            </div>
+          </a>
+        </li> 
+        <li class="collection-item avatar">
+            <img src="images/lightbulb.png" alt="" class="circle">
+          <span class="title">Lámpara 3</span>
+          <p>Luz habitación </p>
+          <a href="#!" class="secondary-content">
+                        Switch 
+            <div class="switch">
+                <label>
+                Off
+                <input type="checkbox">
+                <span class="lever"></span>
+                On
+                </label>
+            </div>
+          </a>
+        </li> -->
+        </ul>
+    </div>
+    <!-- Page Footer -->
+    <footer class="page-footer" style="background-color:#124580">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s6">
+                    <h5 class="white-text">Smart Home</h5>
+                    <p class="grey-text text-lighten-4">Copyright USER NAME - 2020</p>
+                </div>
+                <div class="col l6 s6">
+                    <h5 class="white-text right-align">Contact us</h5>
+                    <p class="white-text right-align">
+                        <a class="grey-text text-lighten-3" href="!#">LinkedIn | </a>
+                        <a class="grey-text text-lighten-3" href="!#">Github | </a>
+                        <a class="grey-text text-lighten-3" href="!#">Dockerhub</a>
+                    </p>
                 </div>
             </div>
-		</div>	
-		<!-- Page Footer -->
-        <footer class="page-footer" style="background-color:#124580">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s6">
-                        <h5 class="white-text">Smart Home</h5>
-                        <p class="grey-text text-lighten-4">Copyright USER NAME - 2020</p>
-                    </div>
-                    <div class="col l6 s6">
-                        <h5 class="white-text right-align">Contact us</h5>
-                        <p class="white-text right-align">
-                            <a class="grey-text text-lighten-3" href="!#">LinkedIn | </a>
-                            <a class="grey-text text-lighten-3" href="!#">Github | </a>
-                            <a class="grey-text text-lighten-3" href="!#">Dockerhub</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-		<!--JavaScript at end of body for optimized loading-->
-		<script type="text/javascript" src="static/js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="js/Users.js"></script>
-        <script type="text/javascript" src="js/MyFramework.js"></script>
-    </body>
-  </html>
+        </div>
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="static/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/Users.js"></script>
+    <script type="text/javascript" src="js/MyFramework.js"></script>
+    <script type="text/javascript" src="js/ViewMainPage.js"></script>
+</body>
+
+</html>
