Se modificaron los archivos

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -50,8 +50,8 @@
                                 </div>
                         </div>
                         <div class="container">
-                            <a id="boton-prueba"></a>
-                            <a id="boton" class="waves-effect waves-light btn">AGREGAR</a>
+                            <a id="boton-agregar"></a>
+                            <a id="aboton" class="waves-effect waves-light btn">AGREGAR</a>
                         </div>
 
                 </li>
@@ -60,8 +60,20 @@
                     <div class="collapsible-header">
                         <i class="material-icons">delete</i>ELIMINAR DISPOSITIVO</div>
                     <div class="collapsible-body">
-                        <p>This is second section.</p>
-                    </div>
+                        <div class="row">
+                            <form class="col s12">
+                                <div class="row">
+                                    <div class="input-field col s6">
+                                        <input placeholder="Placeholder" id="nDispositivo" type="text" class="validate">
+                                        <label for="nDispositivo">Nombre dispositivo</label>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="container">
+                            <a id="boton-eliminar"></a>
+                            <a id="eboton" class="waves-effect waves-light btn">ELIMINAR</a>
+                        </div>
+
                 </li>
             </ul>
 
