--- a/src/front/index.html
+++ b/src/front/index.html
@@ -51,13 +51,13 @@
                                     <form action="#">
                                         <p>
                                             <label>
-                                                <input type="checkbox" />
+                                                <input type="checkbox" onclick="aDevice()" id = "lampara"  checked/>
                                                 <span>Lampara</span>
                                             </label>
                                         </p>
                                         <p>
                                             <label>
-                                                <input type="checkbox" />
+                                                <input type="checkbox" onclick="aDevice()" id = "Persiana" checked/>
                                                 <span>Persiana</span>
                                             </label>
                                         </p>
@@ -85,8 +85,8 @@
                                 </div>
                         </div>
                         <div class="container">
-                            <a id="eboton"></a>
-                            <a id="eboton" class="waves-effect waves-light btn">ELIMINAR</a>
+                            <a id="dboton"></a>
+                            <a id="dboton" class="waves-effect waves-light btn">ELIMINAR</a>
                         </div>
 
                 </li>
