Se corrigieron funcionalidades de los botones

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -41,23 +41,29 @@
                                 <div class="row">
                                     <div class="input-field col s6">
                                         <i class="material-icons prefix">mode_edit</i>
-                                        <input placeholder="nDevice" id="nDispositivo" type="text" class="validate">
+                                        <input placeholder="nDevice" id="nDispositivo" type="text" maxlength='20'class="validateName">
+                                        <input placeholder="Estado" id="sDispositivo" type="text" maxlength='1'class="validateName">
+                                        <input placeholder="Descripcion" id="descDispositivo" type="text" maxlength='25'class="validateName">
                                         <label class="active" for="nDispositivo">Nombre dispositivo</label>
                                     </div>
-                                    <div class="input-field col s6">
-                                        <input placeholder = "sDevice" id="sDispositivo" type="number" class="validate">
-                                        <label class="active" for="eDispositivo">Estado dispositivo</label>
-                                    </div>
+                                    <!--<div class="switch">
+                                        <label>
+                                        Off
+                                        <input type="checkbox" id="devstate">
+                                        <span class="lever"></span>
+                                        On
+                                        </label>
+                                    </div>-->
                                     <form action="#">
                                         <p>
                                             <label>
-                                                <input type="checkbox" onclick="aDevice()" id = "lampara"  checked/>
+                                                <input type="checkbox" name = "device_type"id = "lampara"  unchecked/>
                                                 <span>Lampara</span>
                                             </label>
                                         </p>
                                         <p>
                                             <label>
-                                                <input type="checkbox" onclick="aDevice()" id = "Persiana" checked/>
+                                                <input type="checkbox" name = "device_type" id = "Window" unchecked/>
                                                 <span>Persiana</span>
                                             </label>
                                         </p>
@@ -65,13 +71,7 @@
                         </div>
                         <div class="container">
                             <a id="boton" class="waves-effect waves-light btn">AGREGAR</a>
-                            <a id="boton"  onclick= "editar()" class="waves-effect waves-light btn">EDITAR</a>
-                            <script>
-                                function editar(){
-                                    document.getElementById(dev.name).contentEditable = true
-                                }
-                            </script>
-
+                            <a id="boton"  class="waves-effect waves-light btn">EDITAR</a>
                         </div>
 
                 </li>
@@ -85,7 +85,7 @@
                                 <div class="row">
                                     <div class="input-field col s6">
                                         <i class="material-icons prefix">mode_edit</i>
-                                        <input placeholder="dDevice" id="dDispositivo" type="text" class="validate">
+                                        <input placeholder="Inserte nombre del dispositivo" id="devname" type="text" class="validate">
                                         <label for="dDispositivo">Nombre dispositivo</label>
                                     </div>
                                 </div>
@@ -93,11 +93,6 @@
                         <div class="container">
                             <a id="dboton" class="waves-effect waves-light btn">ELIMINAR</a>
                         </div>
-                        <div class="container">
-                            <a id="Eboton"></a>
-                        </div>
-                       
-
                 </li>
             </ul>
 
