--- a/src/front/index.html
+++ b/src/front/index.html
@@ -85,7 +85,7 @@
                                 <div class="row">
                                     <div class="input-field col s6">
                                         <i class="material-icons prefix">mode_edit</i>
-                                        <input placeholder="Inserte nombre del dispositivo" id="devname" type="text" class="validate">
+                                        <input placeholder="Inserte nombre del dispositivo" id="devname" type="text" maxlength='20' class="validate">
                                         <label for="dDispositivo">Nombre dispositivo</label>
                                     </div>
                                 </div>
