Se corrigio el funcionamiento de los swtiches

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -71,7 +71,7 @@
                         </div>
                         <div class="container">
                             <a id="boton" class="waves-effect waves-light btn">AGREGAR</a>
-                            <a id="boton"  class="waves-effect waves-light btn">EDITAR</a>
+                            <a id="editBoton"  class="waves-effect waves-light btn">EDITAR</a>
                         </div>
 
                 </li>
